--- a/Nuages.Identity.UI/Pages/Account/ConfirmEmail.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ConfirmEmail.cshtml
@@ -4,14 +4,10 @@
     ViewData["Title"] = Localizer["confirmEmail:title"];
 }
 
-<div class="flex justify-center mt-4">
-    <div class="flex flex-col " >
-        <i class="fa fa-check-circle text-green-700 fa-3x text-center" ></i>
-        <span class="mt-4">@Model.StatusMessage</span>
-    </div>
+
+<div class="mb-4 p-4">
+    <span class="text-green-700 font-medium">
+        <i class="fas fa-check"></i> @Model.StatusMessage
+    </span>
 </div>
 
-@section MainFooter
-{
-    <partial name="Shared/BackToLogin"/>
-}
