--- a/Nuages.Identity.UI/Pages/Account/ExternalLogin.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ExternalLogin.cshtml
@@ -6,35 +6,38 @@
     ViewData["Title"] = Localizer["externalLogin:title"];
 }
 
-<div class="flex justify-center mt-6" >
-        
-    <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
-    <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
-        <i class="fa fa-check-circle text-green-700 fa-3x text-center" ></i>
-        <span class="mt-4">@Localizer["externalLogin:accountCreated"]</span>
-    </div>
-       
+
+<div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
+    <span class="text-green-700 font-medium">
+        <i class="fas fa-check"></i> @Localizer["register:accountCreated"]
+    </span>
 </div>
+
 
 <div v-show="status != 'sending'">
     <partial name="Shared/ErrorList"/>
 </div>
+
 @if (string.IsNullOrEmpty(Model.ErrorMessage))
 {
-    <form id="formExternalLogin" class="space-y-4 mt-4" method="POST" v-on:submit.prevent="externalLogin" v-if="status == ''">
-        <span> @Localizer["externalLogin:instructions"]</span> <strong>@Model.ProviderDisplayName.</strong>
-        <span class="mt-2"> @Localizer["externalLogin:instructions2"]</span>
-        <input id="email" name="email" type="hidden" autofocus="" v-model="email" placeholder="@Localizer["email"]" required class="text-box">
-        <button v-on:click.prevent="externalLogin" class="primary full">@Localizer["externalLogin:button"]</button>
-    </form> 
+    <form id="formExternalLogin" class=" mt-4" method="POST" v-on:submit.prevent="externalLogin" v-if="status != 'done'">
+        <fieldset class="space-y-4" :disabled="status == 'sending'">
+            <span> @Localizer["externalLogin:instructions"]</span> <strong>@Model.ProviderDisplayName.</strong>
+            <span class="mt-2"> @Localizer["externalLogin:instructions2"]</span>
+            <input id="email" name="email" type="hidden" autofocus="" v-model="email" placeholder="@Localizer["email"]" required class="text-box">
+            <button v-on:click.prevent="externalLogin" class="primary full items-center" :disabled="status == 'sending'">
+                @Localizer["externalLogin:button"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
+            </button>
+        </fieldset>
+    </form>
 }
 else
-{      
+{
     <ul class="text-red-800 mb-3">
         <li class="flex">
             <i class="fas fa-exclamation-circle text-red-700 hover:text-red-700 mt-1 mb-2"></i>
             <div class="ml-2 mr-2 mb-2">
-               @Model.ErrorMessage
+                @Model.ErrorMessage
             </div>
         </li>
     </ul>
@@ -47,10 +50,10 @@ else
         var returnUrl = '@Html.Raw(Model.ReturnUrl)';
         var emailInitialValue = '@ViewData["email"]'
     </script>
-   
+
     <script src="/js/pages/externalLogin.js"></script>
 }
-   
+
 @section MainFooter
 {
     <partial name="Shared/BackToLogin"/>
