--- a/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
@@ -6,21 +6,25 @@
     ViewData["Title"] = Localizer["forgotPassword:title"];
 }
 
-<div class="flex justify-center mt-6">
-    <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
-    <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
-        <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i>
-        <span class="mt-4">@Localizer["forgotPassword:seeEmail"]</span>
-    </div>
+   
+<div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
+    <span class="text-green-700 font-medium">
+        <i class="fas fa-check"></i> @Localizer["forgotPassword:seeEmail"]
+    </span>
 </div>
 
-<form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="forgotPassword" id="formforgotPassword" v-if="status == ''">
+<form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="forgotPassword" id="formforgotPassword" v-if="status != 'done'">
     <span>@Localizer["forgotPassword:instructions"]</span>
+ 
+    
     <partial name="Shared/ErrorList"/>
-    <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["yourEmail"]" required class="text-box">
-    <button v-on:click.prevent="forgotPassword" class="primary full">
-        @Localizer["forgotPassword:reset"]
-    </button>
+    <fieldset class="space-y-4"  :disabled="status == 'sending'" >
+         <input id="email" name="email" type="email" autofocus="" v-model="email" placeholder="@Localizer["yourEmail"]" required class="text-box">
+            <button v-on:click.prevent="forgotPassword" class="primary full"  :disabled="status == 'sending'">
+                @Localizer["forgotPassword:reset"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
+            </button>
+    </fieldset>
+   
 </form>
 
 @section Scripts
