--- a/Nuages.Identity.UI/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -1,35 +1,34 @@
 ﻿@page
 @model EnableAuthenticatorModel
 @{
-    ViewData["Title"] = "Configure authenticator app";
+    ViewData["Title"] = Localizer["enableAuthenticator.title"];
 }
 
 <div  id="app">
-    <h2 class="page-header">Configure authenticator app</h2>
+    <h2 class="page-header">@Localizer["enableAuthenticator.title"]</h2>
     
     <div class="space-y-4 flex flex-col" >
-         <div class="text-gray-500">To use an authenticator app go through the following steps:</div>
+         <div class="text-gray-500">@Localizer["enableAuthenticator.instructions"]</div>
             
             <div class="space-y-2">
-                <STRONG>Scan the QR Code </STRONG>
+                <STRONG>@Localizer["enableAuthenticator.scanCode"]</STRONG>
                 <div id="qrCode" class="justify-center"></div>
                 <div id="qrCodeData" data-url="@Model.AuthenticatorUri"></div>
             </div>
     
-         <span class="text-gray-500"> or enter this key</span>
+         <span class="text-gray-500"> @Localizer["enableAuthenticator.enterKey"]</span>
           <span class="inline-flex items-center px-2.5 py-0.5 rounded-md text-sm font-medium bg-indigo-100 text-lg text-indigo-800">
                 @Model.SharedKey
             </span>
-            <p class="text-gray-500">
-                Once you have scanned the QR code or input the key above, your two factor authentication app will provide you
-                with a unique code. Enter the code in the confirmation box below.
-            </p>
+        <p class="text-gray-500">
+            @Localizer["enableAuthenticator.instructions2"]
+        </p>
             <div>
                   <partial name="Shared/ErrorList"/>
                   <form class="mt-4" id="formCode" method="post" v-on:submit.prevent="verifyCode">
                       <fieldset :disabled="status == 'sending'" class="flex flex-row space-x-2">
                            <input id="code" name="code" required class="text-box " v-model="code"/>
-                            <button type="button" class="primary items-center w-36" v-on:click.prevent="verifyCode">@Localizer["enableAuthenticator:submit"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
+                            <button type="button" class="primary items-center w-36" v-on:click.prevent="verifyCode" :disabled="status == 'sending'">@Localizer["enableAuthenticator:submit"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
                             </button>
                       </fieldset>
                   </form>
@@ -41,7 +40,7 @@
 
 @section RightNav
 {
-    <div><strong> Download a two-factor authenticator app like</strong>
+    <div><strong>  @Localizer["enableAuthenticator.downloadApp"]</strong>
                    
             
                     <ul class="list-disc ml-4 mt-2">
