--- a/Nuages.Identity.UI/Pages/Account/Register.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Register.cshtml
@@ -9,32 +9,35 @@
 }
 
 
-<div class="flex justify-center mt-6">
 
-    <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
-    <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
-        <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i>
-        <span class="mt-4">@Localizer["register:accountCreated"]</span>
-    </div>
 
+<div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
+    <span class="text-green-700 font-medium">
+        <i class="fas fa-check"></i> @Localizer["register:accountCreated"]
+    </span>
 </div>
 
-<form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="login" id="formRegister" v-if="status == ''">
+
+<form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="login" id="formRegister" v-if="status != 'done'">
 
     <span>@Localizer["register:instructions"]</span>
     <partial name="Shared/ErrorList"/>
-    <input id="email" name="email" autofocus="" v-model="email" placeholder="@Localizer["yourEmail"]" required class="text-box" type="email">
-    <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["login:password"]" autocomplete="current-password" required class="text-box ">
-    <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["register:passwordConfirmation"]" autocomplete="current-password" required class="text-box ">
-    <button v-on:click.prevent="register" class="primary full">
-        @Localizer["register:button"]
-    </button>
-    <partial name="Shared/PasswordRequirements"/>
+    
+    <fieldset class="space-y-4"  :disabled="status == 'sending'">
+         <input id="email" name="email" autofocus="" v-model="email" placeholder="@Localizer["yourEmail"]" required class="text-box" type="email">
+            <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["login:password"]" autocomplete="current-password" required class="text-box ">
+            <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["register:passwordConfirmation"]" autocomplete="current-password" required class="text-box ">
+            <button v-on:click.prevent="register" class="primary full items-center"  :disabled="status == 'sending'">
+                @Localizer["register:button"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
+            </button>
+            <partial name="Shared/PasswordRequirements"/>
+    </fieldset>
+   
 </form>
 
 @if (Model.ExternalLogins.Count > 0)
 {
-    <div class="relative mt-6">
+    <div class="relative mt-6"  v-if="status != 'done'">
         <div class="absolute inset-0 flex items-center">
             <div class="w-full border-t border-gray-300"></div>
         </div>
@@ -44,7 +47,7 @@
             </span>
         </div>
     </div>
-    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="mt-4">
+    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="mt-4"  v-if="status != 'done'">
         <ul>
 
             @foreach (var provider in Model.ExternalLogins)
