--- a/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
@@ -4,29 +4,34 @@
 @model ResetPasswordModel
 
 
-<div class="flex justify-center mt-6">
-    <i class="fas fa-spinner fa-spin fa-3x" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
-    <div class="flex flex-col " v-if="status == 'done'" v-show="status == 'done'" style="display: none">
-        <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i>
-        <span class="mt-4">@Localizer["resetPassword:success"]</span>
-    </div>
+<div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
+    <span class="text-green-700 font-medium">
+        <i class="fas fa-check"></i> @Localizer["resetPassword:success"]
+    </span>
 </div>
 
-<form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="resetPassword" id="formResetPassword" v-if="status != 'sending' && status != 'done'">
+
+<form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="resetPassword" id="formResetPassword" v-if="status != 'done'">
     <span>@ViewData["Instructions"]</span>
     <partial name="Shared/ErrorList"/>
-    @if (ViewData["email"]?.ToString() == "")
-    {
-        <input id="email" name="email" type="email" v-model="email" placeholder="@Localizer["resetPassword:email"]" required class="text-box" autocomplete="username">
-    }
-    <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["resetPassword:password"]" autocomplete="current-password" required class="text-box ">
-    <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["resetPassword:passwordConfirm"]" autocomplete="current-password" required class="text-box ">
-    <button v-on:click.prevent="resetPassword" class="primary full">
-        @ViewData["Submit"]
-    </button>
-    <partial name="Shared/PasswordRequirements"/>
-</form>
 
+    <fieldset class="space-y-4" :disabled="status == 'sending'" v-if="status != 'done'">
+
+        @if (ViewData["email"]?.ToString() == "")
+        {
+            <input id="email" name="email" type="email" v-model="email" placeholder="@Localizer["resetPassword:email"]" required class="text-box" autocomplete="username">
+        }
+        <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["resetPassword:password"]" autocomplete="current-password" required class="text-box ">
+        <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["resetPassword:passwordConfirm"]" autocomplete="current-password" required class="text-box ">
+        <button v-on:click.prevent="resetPassword" class="primary full items-center" :disabled="status == 'sending'">
+            @ViewData["Submit"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
+        </button>
+
+        <partial name="Shared/PasswordRequirements"/>
+    </fieldset>
+
+
+</form>
 
 @section MainFooter
 {
