--- a/Nuages.Identity.UI/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -19,27 +19,53 @@
                 <div class="space-x-4 flex justify-between items-center">
                     <span >@Localizer["2fa.active"]</span>&nbsp;<button type="button" class="link" v-on:click="showDeactivate = true">@Localizer["2fa.deactivate"]</button>
                 </div>
-<hr/>
-                @if (Model.IsMachineRemembered)
-                {
-                    <a>@Localizer["2fa.forgetMachine"]</a>
-                }
+                <hr/>
                
-                 <div class="space-x-4 flex justify-between items-center">
-                     <span>@Model.RecoveryCodesLeft @Localizer["2fa.codesRemaining"]</span>
-                    <button type="button" class="link" v-if="showCodes == false" v-show="showCodes==false" v-on:click="showCodes=true">@Localizer["2fa:showCodes"]</button>
-                    <button type="button" class="link" v-if="showCodes == true" v-show="showCodes==true" v-on:click="showCodes=false" style="display: none">@Localizer["2fa:hideCodes"]</button>
+
+                <div class="flex flex-col space-y-4">
+                    <div class=" flex justify-between items-center">
+                        <span>@Localizer["2fa.revoveryCodes"]</span>
+                    </div>
+                    <span class="text-gray-500">@Localizer["2fa.recoveryCodesInstructions"] </span>
+                    <div class="flex justify-end">
+                        <button type="button" class="link" v-if="showCodes == false" v-show="showCodes==false" v-on:click="showCodes=true">@Localizer["2fa:showCodes"]</button>
+                        <button type="button" class="link" v-if="showCodes == true" v-show="showCodes==true" v-on:click="showCodes=false" style="display: none">@Localizer["2fa:hideCodes"]</button>
+                    </div>
                 </div>
 
-                <div class="grid grid-cols-3 gap-2" v-if="showCodes" v-show="showCodes" style="display: none">
-                    @foreach (var c in Model.RecoveryCodes)
-                    {
-                        <span class="inline-flex items-center px-2.5 py-0.5 rounded-md text-sm font-medium bg-indigo-100 text-indigo-800">
-                            <code class="recovery-code">@c</code>
-                        </span>
-                    }
+                <div class="bg-indigo-50 overflow-hidden shadow rounded-lg"  v-if="showCodes" v-show="showCodes" style="display: none">
+                    <div class="px-4 py-5 sm:p-6">
+                        <div class="flex flex-col space-y-4">
+                           <div class="grid grid-cols-5 gap-2" id="recoveryCodes" >
+                               @foreach (var c in Model.RecoveryCodes)
+                               {
+                                   <span class="inline-flex items-center justify-center px-2.5 py-0.5 rounded-md text-sm font-medium bg-indigo-200 text-indigo-800">
+                                       <code class="recovery-code">@c</code>
+                                   </span>
+                               }
+                               
+                           </div>
+                           <span class="text-green-700">@Localizer["2fa.recoveryCodesWarning"]</span>
+                            <div class="flex flex-row justify-start space-x-4">
+                                <button type="button" class="link" v-on:click="copy"><i class="fas fa-copy mr-2"></i>@Localizer["2fa.copy"]</button>
+                                <a href="/api/manage/downloadRecoveryCodes" target="_blank"><i class="fas fa-file-download mr-2"></i>@Localizer["2fa.download"]</a>
+                            </div>
+                            <hr/>
+                            <div class="flex flex-col space-y-4 justify-start">
+                                <span class="text-gray-700">@Localizer["2fa.resetCodesWarning"]</span>
+                                <div>
+                                       <button type="button" class="link" v-on:click="resetCodes"><i class="fas fa-sync-alt mr-2"></i>@Localizer["2fa:resetCodes"]</button>
+                                </div>
+                             
+                            </div>
+                            
+                       </div>
+                    </div>
                 </div>
-               <hr/>
+                
+               
+                
+                <hr/>
                 @if (!string.IsNullOrEmpty(Model.FallbackNumber))
                 {
                     <div class="space-x-4 flex justify-between items-center">
@@ -53,10 +79,14 @@
                 else
                 {
                     <div class="space-x-4 flex justify-between items-center">
-                        <span>@Localizer["2fa:fallback"]</span> 
+                        <span>@Localizer["2fa:fallback"]</span>
                         <a href="~/Account/Manage/Phone">@Localizer["2fa.addPhone"]</a>
                     </div>
-                    
+                }
+                @if (Model.IsMachineRemembered)
+                {
+                    <hr/>
+                    <a>@Localizer["2fa.forgetMachine"]</a>
                 }
             </div>
         }
@@ -115,77 +145,81 @@
                     </div>
                     <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
                         <button v-on:click="disable2Fa" type="button" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm">
-                             @Localizer["2fa.deactivate"]
+                            @Localizer["2fa.deactivate"]
                         </button>
                         <button v-on:click="showDeactivate = false" type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:w-auto sm:text-sm">
-                             @Localizer["cancel"]
+                            @Localizer["cancel"]
                         </button>
                     </div>
                 </div>
             </div>
         </div>
-        
-         <div class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true" v-if="showRemovePhone" v-show="showRemovePhone" style="display: none">
-                    <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-                        <!--
-                        Background overlay, show/hide based on modal state.
+
+        <div class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true" v-if="showRemovePhone" v-show="showRemovePhone" style="display: none">
+            <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+                <!--
+                Background overlay, show/hide based on modal state.
                 
-                        Entering: "ease-out duration-300"
-                        From: "opacity-0"
-                        To: "opacity-100"
-                        Leaving: "ease-in duration-200"
-                        From: "opacity-100"
-                        To: "opacity-0"
-                        -->
-                        <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
-        
-                        <!-- This element is to trick the browser into centering the modal contents. -->
-                        <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
-        
-                        <!--
-                        Modal panel, show/hide based on modal state.
+                Entering: "ease-out duration-300"
+                From: "opacity-0"
+                To: "opacity-100"
+                Leaving: "ease-in duration-200"
+                From: "opacity-100"
+                To: "opacity-0"
+                -->
+                <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
+
+                <!-- This element is to trick the browser into centering the modal contents. -->
+                <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+
+                <!--
+                Modal panel, show/hide based on modal state.
                 
-                        Entering: "ease-out duration-300"
-                        From: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-                        To: "opacity-100 translate-y-0 sm:scale-100"
-                        Leaving: "ease-in duration-200"
-                        From: "opacity-100 translate-y-0 sm:scale-100"
-                        To: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-                        -->
-                        <div class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
-                            <div class="sm:flex sm:items-start">
-                                <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
-                                    <!-- Heroicon name: outline/exclamation -->
-                                    <svg class="h-6 w-6 text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"/>
-                                    </svg>
-                                </div>
-                                <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-                                    <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
-                                        @Localizer["2fa:clearPhoneTitle"]
-                                    </h3>
-                                    <div class="mt-2">
-                                        <p class="text-sm text-gray-500">
-                                            @Localizer["2fa:clearPhoneConfirm"]
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
-                                <button v-on:click="removePhone" type="button" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm">
-                                     @Localizer["clear"]
-                                </button>
-                                <button v-on:click="showRemovePhone = false" type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:w-auto sm:text-sm">
-                                     @Localizer["cancel"]
-                                </button>
+                Entering: "ease-out duration-300"
+                From: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                To: "opacity-100 translate-y-0 sm:scale-100"
+                Leaving: "ease-in duration-200"
+                From: "opacity-100 translate-y-0 sm:scale-100"
+                To: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                -->
+                <div class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
+                    <div class="sm:flex sm:items-start">
+                        <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
+                            <!-- Heroicon name: outline/exclamation -->
+                            <svg class="h-6 w-6 text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"/>
+                            </svg>
+                        </div>
+                        <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+                            <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
+                                @Localizer["2fa:clearPhoneTitle"]
+                            </h3>
+                            <div class="mt-2">
+                                <p class="text-sm text-gray-500">
+                                    @Localizer["2fa:clearPhoneConfirm"]
+                                </p>
                             </div>
                         </div>
                     </div>
+                    <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
+                        <button v-on:click="removePhone" type="button" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm">
+                            @Localizer["clear"]
+                        </button>
+                        <button v-on:click="showRemovePhone = false" type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:w-auto sm:text-sm">
+                            @Localizer["cancel"]
+                        </button>
+                    </div>
                 </div>
+            </div>
+        </div>
     </div>
 
 </div>
 
 @section Scripts {
+    <script>
+    var recoveryCodes = "@Model.RecoveryCodesString";
+    
+    </script>
     <script src="/js/pages/manage/twoFactorAuthentication.js"></script>
 }
