--- a/Nuages.Identity.UI/Pages/Account/Login.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Login.cshtml
@@ -51,7 +51,7 @@
        
     </form>
 
-    @if (Model.ExternalLogins.Count > 0)
+    @if (Model.ExternalLogins.Count > 0 || UIOptions.Value.EnablePasswordless)
     {
         <div class="relative mt-6">
             <div class="absolute inset-0 flex items-center">
@@ -71,7 +71,11 @@
                     @provider.DisplayName
                 </button>
             }
-            <a href="~/Account/LoginWithPasswordless" class="btn-simple mt-4"><i class="fas fa-rocket"></i>&nbsp;@Localizer["login:passwordless"]</a>
+            @if (UIOptions.Value.EnablePasswordless)
+            {
+                <a href="~/Account/LoginWithPasswordless" class="btn-simple mt-4"><i class="fas fa-rocket"></i>&nbsp;@Localizer["login:passwordless"]</a>
+            }
+            
         </form>
     }
 </div>
