--- a/Nuages.Identity.UI/wwwroot/css/tailwind.css
+++ b/Nuages.Identity.UI/wwwroot/css/tailwind.css
@@ -57,5 +57,9 @@
     {
         @apply text-3xl font-extrabold text-gray-900 mb-4;
     }
+    
+    select{
+        @apply  block w-full  mt-1  rounded-md  border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50
+    }
 
 }
