--- a/Nuages.Identity.UI/Pages/Account/Manage/_NavBar.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/_NavBar.cshtml
@@ -1,4 +1,4 @@
-
+@inject IOptions<Nuages.Identity.Services.NuagesIdentityOptions> IdentityOptions
 
 <!-- This example requires Tailwind CSS v2.0+ -->
 <nav class="bg-white shadow">
@@ -6,8 +6,11 @@
     <div class="flex justify-between h-16">
       <div class="flex">
         <div class="flex-shrink-0 flex items-center">
-          <img class="block lg:hidden h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="Workflow">
-          <img class="hidden lg:block h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-logo-indigo-600-mark-gray-800-text.svg" alt="Workflow">
+         
+          <h2 class="text-2xl font-extrabold text-gray-700"> @IdentityOptions.Value.Name</h2>
+          
+          @* <img class="block lg:hidden h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="Workflow"> *@
+          @* <img class="hidden lg:block h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-logo-indigo-600-mark-gray-800-text.svg" alt="Workflow"> *@
         </div>
         @* <div class="hidden sm:ml-6 sm:flex sm:space-x-8"> *@
         @*   <!-- Current: "border-indigo-500 text-gray-900", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" --> *@
