--- a/Nuages.Identity.UI/Pages/Account/Manage/Profile.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/Profile.cshtml
@@ -1,6 +1,40 @@
 @page
 @model Nuages.Identity.UI.Pages.Account.Manage.Profile
-
 @{
+    ViewData["Title"] = "Profile";
+}
 
+<div id="app">
+    <h2 class="page-header">Profile</h2>
+    
+    <form class="space-y-4" method="POST" v-on:submit.prevent="saveProfile" id="formProfile">
+        @* <span class="text-gray-500">@Localizer["setPassword:instructions"]</span> *@
+        <partial name="Shared/ErrorList"/>
+        <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
+            <span class="text-green-700 font-medium">
+                <i class="fas fa-check"></i> @Localizer["profile:success"]
+            </span>
+        </div>
+        <fieldset class="space-y-4"  :disabled="status == 'sending'" >
+            <input id="lastName" name="lastName" type="text" v-model="lastName" placeholder="@Localizer["profile:lastName"]" class="text-box ">
+            <input id="firstName" name="firstName" type="text" v-model="firstName" placeholder="@Localizer["profile:firstName"]"  class="text-box ">
+            <button v-on:click.prevent="saveProfile" class="primary full items-center" :disabled="status == 'sending'">
+                @Localizer["profile:save"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
+            </button>
+        </fieldset>
+      
+        
+    </form>
+</div>
+
+
+@section Scripts
+{
+    <script>
+       var lastNameValue = "@Model.CurrentUser.LastName";
+       var firstNameValue = "@Model.CurrentUser.FirstName";
+        
+    </script>
+
+    <script src="/js/pages/manage/profile.js"></script>
 }
