--- a/Nuages.Identity.UI/Pages/Account/LoginWithPasswordless.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWithPasswordless.cshtml
@@ -8,13 +8,13 @@
 
 <form class="mt-4 space-y-4" method="POST" v-on:submit.prevent="sendPasswordlessInfo" id="formPasswordless">
     
-     <span>@Localizer["passwordLess:instructions"]</span>
-            <partial name="Shared/ErrorList"/>
-            <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
-                <span class="text-green-700 font-medium">
-                    <i class="fas fa-check"></i> @Localizer["passwordLess:seeEmail"]
-                </span>
-            </div>
+    <span>@Localizer["passwordLess:instructions"]</span>
+    <partial name="Shared/ErrorList"/>
+    <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done' && errors.length == 0" style="display: none">
+        <span class="text-green-700 font-medium">
+            <i class="fas fa-check"></i> @Localizer["passwordLess:seeEmail"]
+        </span>
+    </div>
             
     <fieldset class="space-y-4 " :disabled="status == 'sending'" v-if="status != 'done'">
 
