--- a/Nuages.Identity.UI/Pages/Shared/PasswordRequirements.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/PasswordRequirements.cshtml
@@ -1,4 +1,5 @@
 @using Nuages.Identity.Services.AspNetIdentity
+@using Nuages.AspNetIdentity
 @inject NuagesUserManager UserManager
 
 <div class="rounded-md bg-blue-50  p-4">
