--- a/Nuages.Identity.UI/Pages/Shared/_Layout.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
-﻿@inject IOptions<Nuages.Web.Recaptcha.GoogleRecaptchaOptions> RecaptchaOptions
-@inject IOptions<Nuages.Identity.Services.NuagesIdentityOptions> IdentityOptions
+﻿@using Nuages.AspNetIdentity
+@inject IOptions<Nuages.Web.Recaptcha.GoogleRecaptchaOptions> RecaptchaOptions
+@inject IOptions<NuagesIdentityOptions> IdentityOptions
 
 <!DOCTYPE html>
 <html lang="en" class="dark">
