--- a/Nuages.Identity.UI/Pages/Account/Manage/_NavBar.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/_NavBar.cshtml
@@ -1,4 +1,5 @@
-@inject IOptions<Nuages.Identity.Services.NuagesIdentityOptions> IdentityOptions
+@using Nuages.AspNetIdentity
+@inject IOptions<NuagesIdentityOptions> IdentityOptions
 
 <!-- This example requires Tailwind CSS v2.0+ -->
 <nav class="bg-white shadow">
