--- a/Nuages.Identity.UI/Pages/Account/Manage/_NavBar.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/_NavBar.cshtml
@@ -1,4 +1,5 @@
 @using Nuages.AspNetIdentity
+@using Nuages.AspNetIdentity.Core
 @inject IOptions<NuagesIdentityOptions> IdentityOptions
 
 <!-- This example requires Tailwind CSS v2.0+ -->
