--- a/Nuages.Identity.UI/Pages/Account/Register.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Register.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Nuages.Identity.UI.Pages.Account.Login
+@model Nuages.Identity.UI.Pages.Account.RegisterModel
 @inject IOptions<Nuages.Web.Recaptcha.GoogleRecaptchaOptions> RecaptchaOptions
 @inject IOptions<UIOptions> UIOptions
 
