--- a/Nuages.Identity.UI/Pages/Connect/Verify.cshtml
+++ b/Nuages.Identity.UI/Pages/Connect/Verify.cshtml
@@ -17,37 +17,40 @@
                 <br />
                 @Model.ErrorDescription (@Model.Error)
             </p>
+            
+            <partial name="Shared/_Warning" model='new { Title = Localizer["warning"], Message = Model.Error }'/>
         }
 
         
 
         <form  method="get" class="flex flex-col space-y-2">
-            <p class="lead text-left">Enter the user code given by the client application:</p>
+            <p class="lead text-left">@Localizer["device.instructions"] :</p>
             <div class="form-check">
                 <input id="user_code" name="user_code" type="text" placeholder="@Localizer["device:code"]" required class="text-box" autofocus="autofocus">
             </div>
 
-            <button class="button primary" type="submit" value="Submit">Submit</button>
+            <button class="button primary" type="submit" value="Submit">@Localizer["submit"]</button>
         </form>
     }
     else
     {
-        <p class="lead text-left">Do you want to grant <strong>@Model.ApplicationName</strong> access to your data? (scopes requested: @Model.Scope)</p>
-        <p class="lead text-center alert alert-warning">
-            Make sure that the code displayed on the device is <strong>@Model.UserCode</strong>.
-            <br />
-            If the two codes don't match, press "No" to reject the authorization demand.
-        </p>
+ 
+        <form method="post"  class="flex flex-col space-y-2">
+           <p class="lead text-left">@Localizer["device.confirm", Model.ApplicationName, Model.Scope] </p>
+            <p class="lead text-center alert alert-warning">
+                @Localizer["device.confirmCode"] <strong>@Model.UserCode</strong>.
+                <br />
+                @Localizer["device.rejectIfDifferentMessage"] 
+            </p>
 
-        <form  method="post">
             @* Flow the request parameters so they can be received by the VerifyAccept/VerifyReject actions: *@
             @foreach (var parameter in ContextAccessor.HttpContext.Request.HasFormContentType ?
-              (IEnumerable<KeyValuePair<string, StringValues>>)ContextAccessor.HttpContext.Request.Form : ContextAccessor.HttpContext.Request.Query)
+                (IEnumerable<KeyValuePair<string, StringValues>>)ContextAccessor.HttpContext.Request.Form : ContextAccessor.HttpContext.Request.Query)
             {
-                <input type="hidden" name="@parameter.Key" value="@parameter.Value" />
+                <input type="hidden" name="@parameter.Key" value="@parameter.Value"/>
             }
 
-            <button class="primary" name="submit.Accept" type="submit" value="Yes" >@Localizer["yes"]</button>
-            <button class="primary" name="submit.Deny" type="submit" value="No" >@Localizer["no"]</button>
+            <button class="primary" name="submit.Accept" type="submit" value="Yes">@Localizer["yes"]</button>
+            <button class="primary" name="submit.Deny" type="submit" value="No">@Localizer["no"]</button>
         </form>
     }
