--- a/Nuages.Identity.UI/Pages/Shared/LogoHeader.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/LogoHeader.cshtml
@@ -15,7 +15,7 @@
     }
     
     <h2 class="mt-6 page-header text-center ">
-      @ViewBag.Title
+      @ViewData["Title"]
     </h2>
   </div>
 
