--- a/Nuages.Identity.UI/Pages/Connect/VerifyDone.cshtml
+++ b/Nuages.Identity.UI/Pages/Connect/VerifyDone.cshtml
@@ -1,9 +1,9 @@
-﻿@page
-@model ConfirmEmailChangeModel
-@{
-    ViewData["Title"] = Localizer["changeEmail:title"];
-}
+@page
+@model Nuages.Identity.UI.Pages.Connect.VerifyAccepted
 
+@{
+    ViewData["Title"] = Localizer["device:title"];
+}
 
 @if (Model.Success)
 {
@@ -11,7 +11,7 @@
        
         <div class="flex flex-col">
             <i class="fa fa-check-circle text-green-700 fa-3x text-center"></i>
-            <span class="mt-4">@Localizer["changeEmail:success"]</span>
+            <span class="mt-4">@Localizer["device:success"]</span>
         </div>
     </div>
 }
@@ -21,7 +21,12 @@ else
       
         <div class="flex flex-col">
             <i class="fa fa-circle-xmark text-red-700 fa-3x text-center"></i>
-            <span class="mt-4">@Localizer["changeEmail:error"]</span>
+            <span class="mt-4">@Localizer["device:error"]</span>
         </div>
     </div>
+}
+
+@section MainFooter
+{
+    <partial name="Shared/BackToHome"/>
 }
