--- a/Nuages.Identity.UI/Pages/Account/Manage/_Layout.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Nuages.Web.Recaptcha
-@using Nuages.AspNetIdentity.Core
+@using Nuages.Identity.Services.AspNetIdentity
 @inject IOptions<GoogleRecaptchaOptions> RecaptchaOptions
 @inject IOptions<NuagesIdentityOptions> IdentityOptions
 
