--- a/Nuages.Identity.UI/Pages/Account/Manage/_NavBar.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/_NavBar.cshtml
@@ -1,4 +1,4 @@
-@using Nuages.AspNetIdentity.Core
+@using Nuages.Identity.Services.AspNetIdentity
 @inject IOptions<NuagesIdentityOptions> IdentityOptions
 
 <!-- This example requires Tailwind CSS v2.0+ -->
