--- a/Nuages.Identity.UI/Pages/Shared/PasswordRequirements.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/PasswordRequirements.cshtml
@@ -1,4 +1,4 @@
-@using Nuages.AspNetIdentity.Core
+@using Nuages.Identity.Services.AspNetIdentity
 @inject NuagesUserManager UserManager
 
 <div class="rounded-md bg-blue-50  p-4">
