--- a/Nuages.Identity.UI/Pages/Account/Manage/EnableAuthenticator.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/EnableAuthenticator.cshtml
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-      <button type="button" class="primary items-center w-36" v-on:click.prevent="makeCredentialOptions" >
+      <button type="button" class="primary items-center w-36" v-on:click.prevent="addSecurityKey" >
             makeCredentialOptions<i class="fas fa-spinner fa-spin ml-2"  style="display: none"></i>
         </button>
 </div>
@@ -64,7 +64,8 @@
       var userName = "@Model.Username";
     </script>
 
-
+    <script src="/js/pages/fido2/helpers.js"></script>
+    <script src="/js/pages/fido2/mfa.register.js"></script>
     <script src="/js/pages/manage/enableAuthenticator.js"></script>
     <script src="/lib/qrcode.js"></script>
     <script src="/js/qr.js"></script>
